--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get install libcurl4-openssl-dev
+
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
